# GLM-OCR-prompt-optimization

./: .env.example  .gitignore  AGENTS.md  Dockerfile.vllm  PRD.md  README.md  codex-log.md  docker-compose.yml  pyproject.toml
data/manifests/aihub-public-admin-ocr/: dev.jsonl  (+2 more)
docs/: 001_glm_ocr_prompt_optimization_report.md  002_cord_v2_full_receipt_report.md  003_korean_ocr_dataset_survey.md  004_non_existing_dataset_shortlist.md  005_korean_ocr_img_text_pair_mini_report.md  006_english_first_optimizer_report.md  007_heldout_benchmark_and_evaluation_upgrade_report.md  008_non_korean_suppression_followup.md  009_arize_ax_vllm_korie_smoke_report.md  009_vllm_local_glm_ocr_report.md  010_arize_ax_vllm_korie_smoke_r1_report.md  011_arize_ax_vllm_korie_benchmark_ocr_rules_report.md
examples/: sample_manifest.jsonl
scripts/: codex_preflight.sh  generate_arize_ax_vllm_smoke_report.py  generate_cord_report.py  generate_english_first_optimizer_report.py  generate_experiment_report.py  generate_heldout_upgrade_report.py  generate_non_korean_suppression_report.py  generate_vllm_local_serving_report.py  run_heldout_benchmark_experiment.sh  run_hf_prepare_and_experiment.sh  run_manifest_experiment.sh  run_vllm_benchmark_experiment.sh  run_vllm_smoke_experiment.sh
src/glm_ocr_prompt_optimization/: __init__.py  arize_logger.py  cli.py  config.py  dataset.py  experiment.py  logger.py  metrics.py  models.py  ocr_client.py  optimizer.py  prompts.py
tests/: test_arize_logger.py  test_cli.py  test_config.py  test_dataset.py  test_experiment.py  test_metrics.py  test_ocr_client.py  test_optimizer.py
(+13 files in other folders)
