[project]
name = "glm-ocr-prompt-optimization"
version = "0.1.0"
description = "Prompt optimization workflow for improving GLM-OCR on Korean receipts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "arize-otel>=0.11.0",
  "arize-phoenix>=8.0.0",
  "matplotlib>=3.10.1",
  "openai>=1.68.2",
  "openinference-instrumentation-openai>=0.1.30",
  "pandas>=2.2.3",
  "pillow>=11.2.1",
  "prompt-learning-enhanced",
  "pydantic>=2.10.6",
  "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
glm-ocr-opt = "glm_ocr_prompt_optimization.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "unit: fast isolated tests for pure logic and local helpers",
  "integration: end-to-end or multi-component workflow tests",
]

[tool.uv]
package = true

[tool.uv.sources]
prompt-learning-enhanced = { git = "https://github.com/Arize-ai/prompt-learning.git" }
